fix main background on mobile

--- a/style.css
+++ b/style.css
@@ -22,10 +22,6 @@ body {
 }
 
 
-main{
-    text-align: right;
-}
-
 
 header {
     padding-block: calc(var(--gutter)*4);
@@ -52,9 +48,9 @@ and then I found that I should change background-size to contain to make it work
 main {
     text-align: right;
     background-image: url("assets/dining-table.png");
-    background-size: contain;
+    background-size: cover;
     background-position: center;
-    background-attachment: fixed;
+    background-repeat: no-repeat;
 
 }
 
